syntax = "proto3";

package exec;

option go_package = "github.com/onkernel/hypeman/lib/exec";

// ExecService provides remote command execution in guest VMs
service ExecService {
  // Exec executes a command with bidirectional streaming
  rpc Exec(stream ExecRequest) returns (stream ExecResponse);
}

// ExecRequest represents messages from client to server
message ExecRequest {
  oneof request {
    ExecStart start = 1;      // Initial exec request
    bytes stdin = 2;          // Stdin data
    WindowSize resize = 3;    // TTY resize event
    Signal signal = 4;        // Signal to send to process
  }
}

// ExecStart initiates command execution
message ExecStart {
  repeated string command = 1;        // Command and arguments
  bool tty = 2;                       // Allocate pseudo-TTY
  string user = 3;                    // Username to run as (optional)
  int32 uid = 4;                      // UID to run as (optional, overrides user)
  map<string, string> env = 5;        // Environment variables
  string cwd = 6;                     // Working directory (optional)
  int32 timeout_seconds = 7;          // Execution timeout in seconds (0 = no timeout)
}

// WindowSize represents TTY dimensions
message WindowSize {
  uint32 rows = 1;
  uint32 cols = 2;
}

// SignalType represents Unix signals
enum SignalType {
  SIGNAL_UNSPECIFIED = 0;
  SIGHUP = 1;
  SIGINT = 2;
  SIGQUIT = 3;
  SIGKILL = 9;
  SIGTERM = 15;
  SIGSTOP = 19;
  SIGCONT = 18;
}

// Signal represents a signal to send to the process
message Signal {
  SignalType signal = 1;
}

// ExecResponse represents messages from server to client
message ExecResponse {
  oneof response {
    bytes stdout = 1;     // Stdout data
    bytes stderr = 2;     // Stderr data
    int32 exit_code = 3;  // Command exit code (final message)
  }
}

